# serializer version: 1
# name: test_config_entry_diagnostics
  dict({
    'connection': dict({
      'available': True,
      'last_error': None,
      'last_message_at': 1700000100.0,
      'mserv_id': 1,
      'reconnect_count': 0,
      'started_at': 1700000000.0,
    }),
    'entry': dict({
      'data': dict({
        'host': '**REDACTED**',
        'password': '**REDACTED**',
        'username': '**REDACTED**',
      }),
      'has_unique_id': True,
      'version': 1,
    }),
    'location_map': dict({
      '1': 'Salon',
      '2': 'Kuchnia',
    }),
    'modules': list([
      dict({
        'capabilities': list([
          'env_sensor',
          'ir_output',
        ]),
        'hw_version': 7,
        'id': 17,
        'last_seen': 1779565263.0,
        'mac': 52111,
        'mac_global': None,
        'model': 'M-SENS',
        'name': 'm-sens salon',
        'sw_version': 63,
        'type': 44,
        'unimplemented_platforms': list([
          'remote',
        ]),
      }),
      dict({
        'capabilities': list([
          'digital_input',
          'digital_output',
          'temperature_input',
        ]),
        'hw_version': 2,
        'id': 3,
        'last_seen': None,
        'mac': 48770,
        'mac_global': None,
        'model': 'M-REL-8s',
        'name': 'MREL 3',
        'sw_version': 11000,
        'type': 4,
        'unimplemented_platforms': list([
          'binary_sensor',
          'event',
          'switch',
        ]),
      }),
      dict({
        'capabilities': list([
          'digital_input',
          'digital_output',
          'hub',
          'temperature_input',
        ]),
        'hw_version': 7,
        'id': 1,
        'last_seen': None,
        'mac': 1,
        'mac_global': 47846,
        'model': 'M-SERV-s',
        'name': 'MSERV',
        'sw_version': 11639,
        'type': 10,
        'unimplemented_platforms': list([
          'binary_sensor',
          'event',
          'switch',
        ]),
      }),
    ]),
    'objects': dict({
      'items': list([
        dict({
          'device_id': 17,
          'funkcja': 1,
          'group_ids': list([
          ]),
          'has_value': True,
          'hidden': False,
          'id': 36,
          'input_kind': None,
          'interpretacja': 1,
          'is_system': False,
          'kind': 'temperature',
          'leaf_id': '0_cb8f_temp_0_1',
          'matter_exposed': True,
          'name': 'Temperatura',
          'params': 137438953473,
          'skip_reason': None,
          'typ_komponentu': 'temp',
          'visible': True,
        }),
        dict({
          'device_id': 17,
          'funkcja': 2,
          'group_ids': list([
          ]),
          'has_value': True,
          'hidden': False,
          'id': 37,
          'input_kind': None,
          'interpretacja': 1,
          'is_system': False,
          'kind': 'humidity',
          'leaf_id': '0_cb8f_lin_0_2',
          'matter_exposed': False,
          'name': 'Wilgotność',
          'params': 0,
          'skip_reason': None,
          'typ_komponentu': 'lin_wej',
          'visible': True,
        }),
        dict({
          'device_id': 17,
          'funkcja': 3,
          'group_ids': list([
          ]),
          'has_value': True,
          'hidden': False,
          'id': 43,
          'input_kind': None,
          'interpretacja': 7,
          'is_system': False,
          'kind': 'co2',
          'leaf_id': '0_cb8f_lin_0_3',
          'matter_exposed': False,
          'name': None,
          'params': 0,
          'skip_reason': None,
          'typ_komponentu': 'lin_wej',
          'visible': True,
        }),
        dict({
          'device_id': 17,
          'funkcja': 3,
          'group_ids': list([
          ]),
          'has_value': False,
          'hidden': True,
          'id': 132,
          'input_kind': None,
          'interpretacja': 7,
          'is_system': False,
          'kind': 'co2',
          'leaf_id': '0_cb8f_lin_0_3',
          'matter_exposed': False,
          'name': None,
          'params': 17,
          'skip_reason': 'not_visible',
          'typ_komponentu': 'lin_wej',
          'visible': False,
        }),
        dict({
          'device_id': 17,
          'funkcja': 4,
          'group_ids': list([
          ]),
          'has_value': False,
          'hidden': False,
          'id': 99,
          'input_kind': None,
          'interpretacja': 2,
          'is_system': False,
          'kind': 'pressure_abs',
          'leaf_id': '',
          'matter_exposed': False,
          'name': None,
          'params': 0,
          'skip_reason': 'not_visible',
          'typ_komponentu': 'lin_wej',
          'visible': False,
        }),
      ]),
      'overview': dict({
        'by_typ_komponentu': dict({
          'lin_wej': 4,
          'temp': 1,
        }),
        'classified_inputs': 0,
        'classified_sensors': 5,
        'hidden_by_visibility_by_typ_komponentu': dict({
          'lin_wej': 2,
        }),
        'included_in_entity_list_count': 3,
        'sensor_without_funkcja': 0,
        'system_count': 0,
        'total': 5,
        'uncategorised_typ_komponentu': list([
        ]),
        'ungrouped_visible_count': 3,
      }),
    }),
    'protocol_payloads': dict({
      'devices_details': dict({
        'List': list([
          dict({
            'funkcja': 1,
            'id': 36,
            'id_urzadzenia': 17,
            'interpretacja': 1,
            'leafId': '0_cb8f_temp_0_1',
            'opis_menu': 'Temperatura',
            'params': 137438953473,
            'stan_json': '{"state": "24.4", "on": 1779565263000}',
            'typ_komponentu': 'temp',
          }),
          dict({
            'funkcja': 2,
            'id': 37,
            'id_urzadzenia': 17,
            'interpretacja': 1,
            'leafId': '0_cb8f_lin_0_2',
            'opis_menu': 'Wilgotność',
            'stan_json': '{"state": "42.000000", "on": 1779565263000}',
            'typ_komponentu': 'lin_wej',
          }),
          dict({
            'funkcja': 3,
            'id': 43,
            'id_urzadzenia': 17,
            'interpretacja': 7,
            'leafId': '0_cb8f_lin_0_3',
            'stan_json': '{"state": "900.5", "on": 1779565263000}',
            'typ_komponentu': 'lin_wej',
          }),
          dict({
            'funkcja': 3,
            'id': 132,
            'id_urzadzenia': 17,
            'interpretacja': 7,
            'leafId': '0_cb8f_lin_0_3',
            'params': 17,
            'typ_komponentu': 'lin_wej',
          }),
          dict({
            'funkcja': 4,
            'id': 99,
            'id_urzadzenia': 17,
            'interpretacja': 2,
            'leafId': '',
            'typ_komponentu': 'lin_wej',
          }),
        ]),
        'Status': 0,
      }),
      'info': dict({
        'Results': dict({
          'device_id': '0011223344556677',
          'local_ip': '**REDACTED**',
          'mac': 47846,
          'mqttVersion': '5.133.11',
          'serverRevision': '409',
          'serverVersion': '1865',
        }),
      }),
    }),
    'room_map': dict({
      '36': 'Salon',
      '37': 'Salon',
      '43': 'Salon',
    }),
    'server_info': dict({
      'device_id': '0011223344556677',
      'local_ip': '**REDACTED**',
      'mac': 47846,
      'mqtt_version': '5.133.11',
      'server_revision': '409',
      'server_version': '1865',
    }),
    'versions': dict({
      'ampio_mqtt': '0.6.0',
      'homeassistant': '2026.6.0.dev0',
      'python': '3.14.5',
    }),
  })
# ---
# name: test_device_diagnostics
  dict({
    'connection': dict({
      'available': True,
      'last_error': None,
      'last_message_at': 1700000100.0,
      'mserv_id': 1,
      'reconnect_count': 0,
      'started_at': 1700000000.0,
    }),
    'module': dict({
      'capabilities': list([
        'env_sensor',
        'ir_output',
      ]),
      'hw_version': 7,
      'id': 17,
      'last_seen': 1779565263.0,
      'mac': 52111,
      'mac_global': None,
      'model': 'M-SENS',
      'name': 'm-sens salon',
      'sw_version': 63,
      'type': 44,
      'unimplemented_platforms': list([
        'remote',
      ]),
    }),
    'objects': list([
      dict({
        'device_id': 17,
        'funkcja': 1,
        'group_ids': list([
        ]),
        'has_value': True,
        'hidden': False,
        'id': 36,
        'input_kind': None,
        'interpretacja': 1,
        'is_system': False,
        'kind': 'temperature',
        'leaf_id': '0_cb8f_temp_0_1',
        'matter_exposed': True,
        'name': 'Temperatura',
        'params': 137438953473,
        'skip_reason': None,
        'typ_komponentu': 'temp',
        'visible': True,
      }),
      dict({
        'device_id': 17,
        'funkcja': 2,
        'group_ids': list([
        ]),
        'has_value': True,
        'hidden': False,
        'id': 37,
        'input_kind': None,
        'interpretacja': 1,
        'is_system': False,
        'kind': 'humidity',
        'leaf_id': '0_cb8f_lin_0_2',
        'matter_exposed': False,
        'name': 'Wilgotność',
        'params': 0,
        'skip_reason': None,
        'typ_komponentu': 'lin_wej',
        'visible': True,
      }),
      dict({
        'device_id': 17,
        'funkcja': 3,
        'group_ids': list([
        ]),
        'has_value': True,
        'hidden': False,
        'id': 43,
        'input_kind': None,
        'interpretacja': 7,
        'is_system': False,
        'kind': 'co2',
        'leaf_id': '0_cb8f_lin_0_3',
        'matter_exposed': False,
        'name': None,
        'params': 0,
        'skip_reason': None,
        'typ_komponentu': 'lin_wej',
        'visible': True,
      }),
      dict({
        'device_id': 17,
        'funkcja': 3,
        'group_ids': list([
        ]),
        'has_value': False,
        'hidden': True,
        'id': 132,
        'input_kind': None,
        'interpretacja': 7,
        'is_system': False,
        'kind': 'co2',
        'leaf_id': '0_cb8f_lin_0_3',
        'matter_exposed': False,
        'name': None,
        'params': 17,
        'skip_reason': 'not_visible',
        'typ_komponentu': 'lin_wej',
        'visible': False,
      }),
      dict({
        'device_id': 17,
        'funkcja': 4,
        'group_ids': list([
        ]),
        'has_value': False,
        'hidden': False,
        'id': 99,
        'input_kind': None,
        'interpretacja': 2,
        'is_system': False,
        'kind': 'pressure_abs',
        'leaf_id': '',
        'matter_exposed': False,
        'name': None,
        'params': 0,
        'skip_reason': 'not_visible',
        'typ_komponentu': 'lin_wej',
        'visible': False,
      }),
    ]),
    'versions': dict({
      'ampio_mqtt': '0.6.0',
      'homeassistant': '2026.6.0.dev0',
      'python': '3.14.5',
    }),
  })
# ---
# name: test_device_diagnostics_for_unknown_device
  dict({
    'connection': dict({
      'available': True,
      'last_error': None,
      'last_message_at': 1700000100.0,
      'mserv_id': 1,
      'reconnect_count': 0,
      'started_at': 1700000000.0,
    }),
    'module': None,
    'objects': list([
    ]),
    'versions': dict({
      'ampio_mqtt': '0.6.0',
      'homeassistant': '2026.6.0.dev0',
      'python': '3.14.5',
    }),
  })
# ---
